tests/snapshots/pretty_print_expressions__async_block.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    async      {
    };
}
