tests/snapshots/pretty_print_expressions__await.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    "future".await;
}
