tests/snapshots/pretty_print_expressions__call.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    "foo"(1, "bar");
}
