tests/snapshots/pretty_print_expressions__closure.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    |a, b| "a" + "b";
}
