tests/snapshots/pretty_print_expressions__field.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    "stru".field;
}
