tests/snapshots/pretty_print_expressions__match.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    match "x"     {
        Some(y) => "y"        ,
        None => 0        ,
    }
;
}
