tests/snapshots/pretty_print_expressions__method_call.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    "obj".method(1, "bar");
}
