tests/snapshots/pretty_print_expressions__struct.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    Foo     {
        a: 1        ,
        b: "bar"        ,
    };
}
