tests/snapshots/pretty_print_expressions__tuple.snap
---
source: tests/pretty_print_expressions.rs
expression: s
---
fn test_fn()  {
    (1, "bar", true);
}
